--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
 	"files.associations": {
 		"keysym.h": "c",
 		"keysymdef.h": "c",
-		"redimi": "cpp"
+		"redimi": "cpp",
+		"bitset": "c",
+		"string_view": "c",
+		"mlx.h": "c"
 	}
 }
