--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,7 +1,7 @@
-NAME = libft.a                                                                                  
+NAME = libft.a
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
-  
+
 SRC = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
         ft_isprint.c ft_strlen.c ft_memset.c ft_bzero.c \
         ft_memcpy.c ft_memmove.c ft_strlcpy.c ft_strlcat.c \
@@ -11,33 +11,33 @@ SRC = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
         ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c \
         ft_strmapi.c ft_striteri.c ft_putchar_fd.c \
         ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
-  
+
 BONUS = ft_lstnew_bonus.c ft_lstadd_front_bonus.c \
           ft_lstsize_bonus.c ft_lstlast_bonus.c \
           ft_lstadd_back_bonus.c ft_lstdelone_bonus.c \
           ft_lstclear_bonus.c ft_lstiter_bonus.c \
           ft_lstmap_bonus.c
-  
+
 OBJ = $(SRC:.c=.o)
 BONUS_OBJ = $(BONUS:.c=.o)
-  
+
 all: $(NAME)
-  
+
 $(NAME): $(OBJ)
 	ar rcs $(NAME) $(OBJ)
-  
+
 bonus: $(OBJ) $(BONUS_OBJ)
 	ar rcs $(NAME) $(OBJ) $(BONUS_OBJ)
-  
-%.o: %.c 
-	$(CC) $(CFLAGS) -c $< -o $@
+
+%.o: %.c
+	@$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJ) $(BONUS_OBJ)
-  
+	@rm -f $(OBJ) $(BONUS_OBJ)
+
 fclean: clean
-	rm -f $(NAME)
-  
-re: fclean all 
+	@rm -f $(NAME)
+
+re: fclean all
 
 .PHONY: all bonus clean fclean re
